# arrow-ballista

./: .gitignore  Cargo.toml
.github/workflows/: comment_bot.yml  rust.yml
ballista-cli/: Cargo.toml
ballista/client/: Cargo.toml
ballista/client/src/: columnar_batch.rs  context.rs
ballista/core/: Cargo.toml  build.rs
ballista/core/proto/: ballista.proto  datafusion.proto
ballista/core/src/: client.rs  error.rs  lib.rs  tracing.rs  utils.rs  warning_collector.rs
ballista/core/tests/: data.arrow
ballista/executor/: Cargo.toml  executor_config_spec.toml
ballista/executor/src/: cpu_bound_executor.rs  execution_engine.rs  execution_loop.rs  executor.rs  executor_process.rs  executor_server.rs  flight_service.rs  global_limit_daemon.rs  global_limit_stream.rs  lib.rs  main.rs  scheduler_client.rs  scheduler_client_registry.rs  standalone.rs
ballista/rust/client/: Cargo.toml
ballista/rust/core/: Cargo.toml
ballista/rust/executor/: Cargo.toml
ballista/rust/scheduler/: Cargo.toml  scheduler_config_spec.toml
ballista/scheduler/: Cargo.toml  scheduler_config_spec.toml
ballista/scheduler/benches/: scheduler_events.rs
ballista/scheduler/src/: config.rs  flight_sql.rs  lib.rs  main.rs  planner.rs  scheduler_process.rs  standalone.rs  test_utils.rs
ballista/tests/: Cargo.toml  build.rs
ballista/tests/proto/: logical_plan.proto  physical_plan.proto
ballista/tests/src/: lib.rs  proto.rs  test_table.rs  (+2 more)
benchmarks/: Cargo.toml
benchmarks/spark/: pom.xml
datafusion/: Cargo.toml
docs/: Makefile
examples/: Cargo.toml
python/: Cargo.toml
(+90 files in other folders)
