[package]
name = "datafusion"
version = "0.1.0"
edition = "2021"

[features]
simd = ["upstream/simd"]
force_hash_collisions = ["upstream/force_hash_collisions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
upstream = { git = "https://github.com/apache/arrow-datafusion", rev = "312a7dd3b9642e64555bd0cfa90f4e10145ea103", package = "datafusion" }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion", rev = "312a7dd3b9642e64555bd0cfa90f4e10145ea103" }
